@@ -111,3 +111,8 @@ type t = private < x : int > as 'a;;
 type t = private (< x : int > as 'a) as 'b;;
 type 'a t = private < x : int; .. > as 'a;;
 type 'a t = private 'a constraint 'a = < x : int; .. >;;
+
+(* PR#7437 *)
+type t = [` Closed ];;
+type nonrec t = private [> t];;
+
